[gd_scene load_steps=6 format=3 uid="uid://drrlp3n3h4c0n"]

[ext_resource type="Script" path="res://scenes/base_scene.gd" id="1_6jlbt"]
[ext_resource type="Script" path="res://scenes/character_body_3d.gd" id="2_84iae"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_vba4x"]

[sub_resource type="Sky" id="Sky_oprh4"]
sky_material = SubResource("ProceduralSkyMaterial_vba4x")

[sub_resource type="Environment" id="Environment_oeg2e"]
background_mode = 2
sky = SubResource("Sky_oprh4")

[node name="base_scene" type="Node3D"]
script = ExtResource("1_6jlbt")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_oeg2e")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2

[node name="create_sensor_array" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "create sensor array"

[node name="start_event" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "start_event
"

[node name="open_array_coords" type="FileDialog" parent="CanvasLayer"]
unique_name_in_owner = true
title = "Open a File"
initial_position = 1
size = Vector2i(675, 320)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.csv")

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
script = ExtResource("2_84iae")
SPEED = 100.0

[node name="Camera3D" type="Camera3D" parent="CharacterBody3D"]

[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/create_sensor_array" to="." method="_on_create_sensor_array_pressed"]
[connection signal="file_selected" from="CanvasLayer/open_array_coords" to="." method="_on_open_array_coords_file_selected"]
